# LogDevice

./: .dockerignore  .gitignore  .gitmodules
.github/workflows/: ci.yml  mbuild.yml
docker/: Dockerfile  Dockerfile.builder  Dockerfile_mbuild.builder
docker/build_deps/: ubuntu.deps  ubuntu_focal_runtime.deps
docs/: LogsDB.md  log_configuration.md  settings.md
docs/administration/: ldquery.md
logdevice/: CMakeLists.txt  build.ml  dune
logdevice/CMake/: logdevice-functions.cmake
logdevice/admin/: AdminAPIHandler.cpp
logdevice/common/: CMakeLists.txt  ConfigInit.cpp  ModuleRegistry.h  RqliteClient.cpp  RqliteClient.h  RqliteVersionedConfigStore.cpp  RqliteVersionedConfigStore.h  Worker.cpp  Worker.h  debug.cpp  debug.h
logdevice/common/configuration/: Configuration.cpp  Configuration.h  RqliteConfig.cpp  RqliteConfig.h  ServerConfig.cpp  ServerConfig.h  TextConfigUpdater.cpp  TextConfigUpdater.h  UpdateableConfig.cpp  UpdateableConfig.h  ZookeeperConfigSource.cpp
logdevice/common/configuration/nodes/: NodesConfigurationManagerFactory.cpp  NodesConfigurationManagerFactory.h  RqliteNodesConfigurationStore.h
logdevice/common/protocol/: HELLO_Message.cpp
logdevice/common/settings/: Settings.cpp  Settings.h
logdevice/common/stats/: Stats.h
logdevice/common/test/: SettingsTest.cpp  TestUtil.cpp  TestUtil.h  WorkerTimeoutStatsTest.cpp
logdevice/include/: CheckpointStoreFactory.h  EnumMap.h  SyncCheckpointedReader.h  debug.h
logdevice/lib/: CMakeLists.txt  ClientFactory.cpp  ClientImpl.cpp
logdevice/lib/checkpointing/: CheckpointStoreFactory.cpp  SyncCheckpointedReaderImpl.cpp  SyncCheckpointedReaderImpl.h
logdevice/ops/: CMakeLists.txt
logdevice/ops/admin_server/: StandaloneAdminServer.cpp
logdevice/ops/ldquery/: CMakeLists.txt  Context.h  LDQuery.cpp  LDQuery.h  QueryBase.cpp  QueryBase.h  Table.cpp  Table.h  TableRegistry.cpp  TableRegistry.h  VirtualTable.h
logdevice/ops/ldquery/tables/: AdminCommandTable.cpp  EpochStore.cpp
logdevice/ops/py_extensions/: CMakeLists.txt
logdevice/server/: CMakeLists.txt  ConnectionListener.cpp  ConnectionListener.h  Listener.h  MyNodeIDFinder.cpp  Server.cpp  ServerSSLFetcher.cpp  ServerSettings.cpp  ServerSettings.h  main.cpp
logdevice/server/epoch_store/: RqliteEpochStore.cpp  RqliteEpochStore.h  ZookeeperEpochStore.cpp
logdevice/test/: CMakeLists.txt
logdevice/test/utils/: IntegrationTestUtils.cpp  IntegrationTestUtils.h  localhost-cluster.cpp
website/versioned_docs/version-2.46.5/: LogsDB.md
website/versioned_docs/version-latest/: settings.md
